--- a/src/App.css
+++ b/src/App.css
@@ -16,5 +16,7 @@
     background: #f8f8f8;
     color: #363636;
 }
-
-
+a {
+    text-decoration: none !important;
+    color: #363636 !important;;
+}
